--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                 <div class="mainmenu-wrapper have-not-flex d-none d-lg-block">
                   <nav class="page_nav">
                     <ul class="mainmenu">
-                      <li class="lavel-1 slide--megamenu"><a href="#"><span>Connect</span></a> <!-- Start Mega Menu -->
+                      <li class="lavel-1 with--drop slide--megamenu"><a href="#"><span>Connect</span></a> <!-- Start Mega Menu -->
                       </li>
                       <li class="lavel-1 with--drop slide--megamenu"><a href="#"><span>Blog</span></a> <!-- Start Mega Menu -->
                         <div class="mega__width--fullscreen">
@@ -393,7 +393,7 @@
               data-responsive_offset="off" data-responsive="off"
               data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"y:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-              style="z-index: 6; white-space: nowrap; font-size: 120px; line-height: 146px; font-weight: 700; color: #ffffff; letter-spacing: 0px; font-family: Roboto; font-weight: 100">Nexus <span class="secondary-font" style="font-style: italic;">Studio</span> </div>
+              style="z-index: 6; white-space: nowrap; font-size: 120px; line-height: 146px; font-weight: 700; color: #ffffff; letter-spacing: 0px; font-family: Roboto">Nexus <span class="secondary-font" style="font-style: italic;">Studio</span> </div>
             <!-- LAYER NR. 3 -->
             <div class="tp-caption " id="slide-7-layer-5" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['54','54','70','50']" data-width="none"
               data-height="none" data-whitespace="nowrap" data-type="image" data-responsive_offset="off" data-responsive="off"
@@ -404,7 +404,7 @@
               data-fontsize="['18','18','18','16']" data-lineheight="['30','30','30','27']" data-width="['570','570','400','360']" data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="off" data-responsive="off"
               data-frames='[{"delay":900,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-              style="z-index: 8; min-width: 570px; max-width: 570px; white-space: normal; font-size: 18px; font-family: Roboto; line-height: 30px; font-weight: 100; color: #ffffff; letter-spacing: 0px;">Gatherings, reinvented. <i>Your portal to a <em>nexus</em> of virtual events.</i></div> <!-- LAYER NR. 5 --> <a class="tp-caption smooth-scroll-link" href="#section-about" target="_self" id="slide-7-layer-7" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+              style="z-index: 8; min-width: 570px; max-width: 570px; white-space: normal; font-size: 18px; line-height: 30px; font-weight: 600; color: #ffffff; letter-spacing: 0px;">Gatherings Reinvented. </div> <!-- LAYER NR. 5 --> <a class="tp-caption smooth-scroll-link" href="#section-about" target="_self" id="slide-7-layer-7" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
               data-y="['bottom','bottom','bottom','bottom']" data-voffset="['110','110','50','50']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="image" data-actions='' data-basealign="slide" data-responsive_offset="off"
               data-responsive="off" data-frames='[{"delay":1000,"speed":1000,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 9;text-decoration: none;">
@@ -459,22 +459,22 @@
       <div class="bk-about-area section-ptb-100" id="section-about">
         <div class="container">
           <div class="row about--creative align-items-center">
-            <div class="col-lg-6 col-md-12 col-12">
-              <div class="thumb text-right text-lg-right wow move-up"> <img src="{{url_for('static',filename='img/about/home-creative-agency-image-01.png')}}" alt="about images"> </div>
-            </div>
             <div class="col-lg-6 col-md-12 col-12 mt_md--40 mt_sm--40">
               <div class="content pl--80 pl_md--5 pl_sm--5">
                 <div class="title--creative wow move-up">
-                  <h3 class="heading">our technology</h3>
+                  <h3 class="heading">our mission</h3>
                   <h2>Dynamic event system <span class="theme-creative">through Unity.</span></h2>
                 </div>
-                <p class="wow move-up">Nexus' is a dynamic event platform regulated by system admins who will be able to create their own customized events based in a 3-dimensional world, enhanced to look as realistic as possible through advanced rendering methods developed on the Unity gaming platform. Our platform utilizes realistic school-building terrain models imported from Google Earth which are enhanced by animated graphics. Our features are equipped with customizable avatars, based in an immersive experience enhanced with a spacial sound system to allow live, real voice communication and interaction with other players.
- .</p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
+                <p class="wow move-up">Nexus is a dynamic event platform regulated by system admins who will be able to create their own customized events based in a 3-dimensional world, enhanced to look as realistic as possible through advanced rendering methods developed on the Unity gaming platform. Our platform utilizes realistic school-building terrain models imported from Google Earth which are enhanced by animated graphics. Our features are equipped with customizable avatars, based in an immersive experience enhanced with a spacial sound system to allow live, real voice communication and interaction with other players.</p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
                     class="fa fa-arrow-right"></i></a>
               </div>
             </div>
+            <div class="col-lg-6 col-md-12 col-12">
+              <div class="thumb text-left text-lg-left wow move-up"> <img src="{{url_for('static',filename='img/about/home-creative-agency-image-01.png')}}" alt="about images"> </div>
+            </div>
           </div>
         </div>
+      </div> <!-- End About Area -->
       <!-- Our technology -->
       <div class="bk-service-area section-pb-120">
         <div class="container">
