--- a/templates/index.html
+++ b/templates/index.html
@@ -45,67 +45,11 @@
                 <div class="mainmenu-wrapper have-not-flex d-none d-lg-block">
                   <nav class="page_nav">
                     <ul class="mainmenu">
+                      <li class="lavel-1 with--drop slide--megamenu"><a href="#"><span>Blog</span></a> <!-- Start Mega Menu -->
+                      </li>
                       <li class="lavel-1 with--drop slide--megamenu"><a href="#"><span>Connect</span></a> <!-- Start Mega Menu -->
                       </li>
-                      <li class="lavel-1 with--drop slide--megamenu"><a href="#"><span>Blog</span></a> <!-- Start Mega Menu -->
-                        <div class="mega__width--fullscreen">
-                          <div class="container">
-                            <div class="row">
-                              <!-- Start Single List -->
-                              <div class="col-lg-3">
-                                <ul class="mega__list">
-                                  <li class="mega--title">Blog Sample 01</li>
-                                  <li><a href="{{url_for('static',filename='blog-creative.html')}}"><span>Creative List</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-standard-list.html')}}"><span>Standard List</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-grid-classic.html')}}"><span>Grid Classic</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-grid-classic-sidebar.html')}}"><span>Grid Classic With Sidebar</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-grid-mesonry.html')}}"><span>Grid Masonry</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-grid-metro.html')}}"><span>Grid Metro</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-grid-minimal.html')}}"><span>Grid Minimal</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-grid-minimal-outline.html')}}"><span>Grid Minimal Outline</span></a></li>
-                                </ul>
-                              </div> <!-- End Single List -->
-                              <!-- Start Single List -->
-                              <div class="col-lg-3">
-                                <ul class="mega__list">
-                                  <li class="mega--title">Blog Sample 02</li>
-                                  <li><a href="{{url_for('static',filename='blog-grid-standard.html')}}"><span>Grid Standard</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-grid-simple.html')}}"><span>Grid Simple</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-grid-sticky.html')}}"><span>Grid Sticky</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-grid-modern.html')}}"><span>Grid Modern</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-overlay-image-list.html')}}"><span>Overlay Image List</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-lazy-load.html')}}"><span>Lazy Load</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-load-more-button.html')}}"><span>Load More Button</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-numeric-pagination.html')}}"><span>Numeric Pagination</span></a></li>
-                                </ul>
-                              </div> <!-- End Single List -->
-                              <!-- Start Single List -->
-                              <div class="col-lg-3">
-                                <ul class="mega__list">
-                                  <li class="mega--title">Single Blog</li>
-                                  <li><a href="{{url_for('static',filename='blog-details.html')}}"><span>Standard Post</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-details-gallery.html')}}"><span>Gallery Post</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-details-video.html')}}"><span>Video Post</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-details-audio.html')}}"><span>Audio Post</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-details-quote.html')}}"><span>Quote Post</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-details-left-sidebar.html')}}"><span>Standard Post – Left Sidebar</span></a></li>
-                                </ul>
-                              </div> <!-- End Single List -->
-                              <!-- Start Single List -->
-                              <div class="col-lg-3">
-                                <ul class="mega__list">
-                                  <li class="mega--title">Single Blog Modern</li>
-                                  <li><a href="{{url_for('static',filename='blog-details-modern-layout.html')}}"><span>Standard Post – Modern Layout</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-details-modern-layout-gallery.html')}}"><span>Gallery Post – Modern Layout</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-details-modern-layout-video.html')}}"><span>Video Post – Modern Layout</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-details-modern-layout-audio.html')}}"><span>Audio Post – Modern Layout</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-details-modern-layout-quote.html')}}"><span>Quote Post – Modern Layout</span></a></li>
-                                  <li><a href="{{url_for('static',filename='blog-details-no-sidebar.html')}}"><span>Standard Post – No Sidebar</span></a></li>
-                                </ul>
-                              </div> <!-- End Single List -->
-                            </div>
-                          </div>
-                        </div> <!-- End Mega Menu -->
+                      <li class="lavel-1 with--drop slide--megamenu"><a href="#"><span>Portal</span></a> <!-- Start Mega Menu -->
                       </li>
                     </ul>
                   </nav>
