--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,6 @@
                 <div class="mainmenu-wrapper have-not-flex d-none d-lg-block">
                   <nav class="page_nav">
                     <ul class="mainmenu">
-                      <li class="lavel-1 slide--megamenu"><a href="#"><span>Blog</span></a> <!-- Start Mega Menu -->
-                      </li>
                       <li class="lavel-1 slide--megamenu"><a href="#"><span>Connect</span></a> <!-- Start Mega Menu -->
                       </li>
                       <li class="lavel-1 slide--megamenu"><a href="/access"><span>Portal</span></a> <!-- Start Mega Menu -->
@@ -694,88 +692,6 @@
           </div>
         </div>
       </div> <!-- End Testimonial Area -->
-      <!-- Start Blog Area -->
-      <div class="bk-blog-area section-ptb-120 clearfix">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="section-title--between wow move-up">
-                <div class="title">
-                  <h3>Blog <span class="theme-creative">Updates</span></h3>
-                </div>
-                <div class="section-btn mt_mobile--30"> <a class="button-text" href="#"><span>View all posts</span><i class="fa fa-arrow-right"></i></a> </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mt--40">
-            <!-- Start Single Portfolio -->
-            <div class="col-lg-6 col-xl-3 col-md-6 col-sm-6 col-12 wow move-up mt--30">
-              <div class="blog blog-style--2 creative--blog">
-                <!-- Swip Slide -->
-                <div class="thumb blog-slick-initial poss_relative"> <a href="{{url_for('static',filename='blog-details.html')}}"><img src="{{url_for('static',filename='img/blog/blog-2/blog-1.jpg')}}" alt="Blog Images"></a> <a
-                    href="{{url_for('static',filename='blog-details.html')}}"><img src="{{url_for('static',filename='img/blog/blog-2/blog-3.jpg')}}" alt="Blog Images"></a> <a href="{{url_for('static',filename='blog-details.html')}}"><img
-                      src="{{url_for('static',filename='img/blog/blog-2/blog-4.jpg')}}" alt="Blog Images"></a> </div>
-                <div class="blog-content">
-                  <div class="content">
-                    <h3 class="the-title"><a href="{{url_for('static',filename='blog-details.html')}}">Career Tips For Emerging Photographers</a></h3>
-                    <ul class="meta">
-                      <li>January 7, 2018</li>
-                      <li><a href="#">Photography</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- End Single Portfolio -->
-            <!-- Start Single Portfolio -->
-            <div class="col-lg-6 col-xl-3 col-md-6 col-sm-6 col-12 wow move-up mt--30">
-              <div class="blog blog-style--2 creative--blog">
-                <div class="thumb"> <a href="{{url_for('static',filename='blog-details.html')}}"><img src="{{url_for('static',filename='img/blog/blog-2/blog-2.jpg')}}" alt="Blog Images"></a>
-                  <div class="video-btn"> <a class="video-icon play__btn" href="https://www.youtube.com/watch?v=9No-FiEInLA"></a> </div>
-                </div>
-                <div class="blog-content">
-                  <div class="content">
-                    <h3 class="the-title"><a href="{{url_for('static',filename='blog-details.html')}}">Niche Blogs for Rising Metal Bands</a></h3>
-                    <ul class="meta">
-                      <li>January 7, 2018</li>
-                      <li><a href="#">Life Style</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- End Single Portfolio -->
-            <!-- Start Single Portfolio -->
-            <div class="col-lg-6 col-xl-3 col-md-6 col-sm-6 col-12 wow move-up mt--30">
-              <div class="blog blog-style--2 creative--blog">
-                <div class="thumb"> <a href="{{url_for('static',filename='blog-details.html')}}"><img src="{{url_for('static',filename='img/blog/blog-2/blog-3.jpg')}}" alt="Blog Images"></a> </div>
-                <div class="blog-content">
-                  <div class="content">
-                    <h3 class="the-title"><a href="{{url_for('static',filename='blog-details.html')}}">1950s up to now Pop Music Defined</a></h3>
-                    <ul class="meta">
-                      <li>January 7, 2018</li>
-                      <li><a href="#">Photography</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- End Single Portfolio -->
-            <!-- Start Single Portfolio -->
-            <div class="col-lg-6 col-xl-3 col-md-6 col-sm-6 col-12 wow move-up mt--30">
-              <div class="blog blog-style--2 creative--blog">
-                <div class="thumb"> <a href="{{url_for('static',filename='blog-details.html')}}"><img src="{{url_for('static',filename='img/blog/blog-2/blog-4.jpg')}}" alt="Blog Images"></a> </div>
-                <div class="blog-content">
-                  <div class="content">
-                    <h3 class="the-title"><a href="{{url_for('static',filename='blog-details.html')}}">The Most Underrated ’90s Bands</a></h3>
-                    <ul class="meta">
-                      <li>January 7, 2018</li>
-                      <li><a href="#">Web Design</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- End Single Portfolio -->
-          </div>
-        </div>
-      </div> <!-- End Blog Area -->
       <!-- Start Row Columns Area -->
       <div class="firefly brook-row-column-area clearfix">
         <div class="aaa creative-gradient--1 ptb--150">
@@ -803,7 +719,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 col-md-6 col-sm-12 col-12">
             <div class="copyright-left text-md-left text-left">
-              <p class="m-0">© 2019 Brook. All Rights Reserved.</p>
+              <p class="m-0">© 2020 Nexus. All Rights Reserved.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12 col-12">
