--- a/templates/index.html
+++ b/templates/index.html
@@ -45,11 +45,11 @@
                 <div class="mainmenu-wrapper have-not-flex d-none d-lg-block">
                   <nav class="page_nav">
                     <ul class="mainmenu">
-                      <li class="lavel-1 slide--megamenu" style="font-family: Roboto; font-weight: 200;"><a href="#"><span>Blog</span></a> <!-- Start Mega Menu -->
+                      <li class="lavel-1 slide--megamenu"><a href="#"><span style="font-family: Roboto; font-weight: 200;">Blog</span></a> <!-- Start Mega Menu -->
                       </li>
-                      <li class="lavel-1 slide--megamenu" style="font-family: Roboto; font-weight: 200;"><a href="#"><span>Connect</span></a> <!-- Start Mega Menu -->
+                      <li class="lavel-1 slide--megamenu"><a href="#"><span style="font-family: Roboto; font-weight: 200;">Connect</span></a> <!-- Start Mega Menu -->
                       </li>
-                      <li class="lavel-1 slide--megamenu" style="font-family: Roboto; font-weight: 200;"><a href="/access"><span>Portal</span></a> <!-- Start Mega Menu -->
+                      <li class="lavel-1 slide--megamenu"><a href="/access"><span style="font-family: Roboto; font-weight: 200;">Portal</span></a> <!-- Start Mega Menu -->
                       </li>
                     </ul>
                   </nav>
