--- a/templates/index.html
+++ b/templates/index.html
@@ -439,7 +439,7 @@
         <div class="container">
           <div class="row about--creative align-items-center">
             <div class="col-lg-6 col-md-12 col-12">
-              <div class="thumb text-left text-lg-left wow move-up"> <img src="{{url_for('static',filename='img/about/home-creative-agency-image-01.png')}}" alt="about images"> </div>
+              <div class="thumb text-left text-lg-left wow move-up"> <img src="{{url_for('static',filename='img/about/image.png')}}" alt="about images"> </div>
             </div>
             <div class="col-lg-6 col-md-12 col-12 mt_md--40 mt_sm--40">
               <div class="content pl--80 pl_md--5 pl_sm--5">
@@ -462,7 +462,7 @@
             <div class="col-lg-6 col-md-12 col-12 mt_md--40 mt_sm--40">
               <div class="content pl--80 pl_md--5 pl_sm--5">
                 <div class="title--creative wow move-up">
-                  <h3 class="heading">our mission</h3>
+                  <h3 class="heading">our technology</h3>
                   <h2>Dynamic event system <span class="theme-creative">through Unity.</span></h2>
                 </div>
                 <p class="wow move-up">Nexus is a dynamic event platform regulated by system admins who will be able to create their own customized events based in a 3-dimensional world, enhanced to look as realistic as possible through advanced rendering methods developed on the Unity gaming platform. Our platform utilizes realistic school-building terrain models imported from Google Earth which are enhanced by animated graphics. Our features are equipped with customizable avatars, based in an immersive experience enhanced with a spacial sound system to allow live, real voice communication and interaction with other players.</p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
@@ -470,12 +470,34 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-12 col-12">
-              <div class="thumb text-left text-lg-left wow move-up"> <img src="{{url_for('static',filename='img/about/home-creative-agency-image-01.png')}}" alt="about images"> </div>
+              <div class="thumb text-left text-lg-left wow move-up"> <img src="{{url_for('static',filename='img/about/image.png')}}" alt="about images"> </div>
             </div>
           </div>
         </div>
       </div> <!-- End About Area -->
       <!-- Our technology -->
+      <!-- Start About Area -->
+      <div class="bk-about-area section-ptb-100" id="section-about">
+        <div class="container">
+          <div class="row about--creative align-items-center">
+            <div class="col-lg-6 col-md-12 col-12">
+              <div class="thumb text-left text-lg-left wow move-up"> <img src="{{url_for('static',filename='img/about/image.png')}}" alt="about images"> </div>
+            </div>
+            <div class="col-lg-6 col-md-12 col-12 mt_md--40 mt_sm--40">
+              <div class="content pl--80 pl_md--5 pl_sm--5">
+                <div class="title--creative wow move-up">
+                  <h3 class="heading">who we are</h3>
+                  <h2>We're motivated by the <span class="theme-creative">desire to achieve.</span></h2>
+                </div>
+                <p class="wow move-up">We are a diverse team of high-school students based in various locations across the United States seeking to provide schools and institutions a virtual alternative to physical location-based community events while upholding health regulations and our collective social responsibilities.</p> <a class="about-btn wow move-up" href="#"><span>More Details</span><i
+                    class="fa fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div> <!-- End About Area -->
+
+
       <div class="bk-service-area section-pb-120">
         <div class="container">
           <div class="row">
@@ -521,7 +543,7 @@
                 <div class="title">
                   <h3> Featured <span class="theme-creative">Projects</span></h3>
                 </div>
-                <div class="section-btn mt_mobile--30"> <a class="button-text" href="#"><span>View all projects</span><i class="fa fa-arrow-right"></i></a> </div>
+              <!-->  <div class="section-btn mt_mobile--30"> <a class="button-text" href="#"><span>View all projects</span><i class="fa fa-arrow-right"></i></a> </div> <-->
               </div>
             </div>
           </div>
