--- a/templates/index.html
+++ b/templates/index.html
@@ -504,8 +504,8 @@
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
-                          <h3 class="port-title">Digital Marketing Basics</h3>
-                          <div class="category">Digital</div>
+                          <h3 class="port-title">The Virtual Villeage</h3>
+                          <div class="category">Lawrenceville School</div>
                         </div>
                       </div>
                     </div> <!-- End Single Portfolio -->
