--- a/templates/index.html
+++ b/templates/index.html
@@ -359,7 +359,7 @@
               data-responsive="off"
               data-frames='[{"delay":1100,"speed":1500,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;rZ:-90;tO:20% 0%;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-              style="z-index: 10; white-space: nowrap; font-size: 15px; line-height: 21px; font-weight: 500; color: #ffffff; letter-spacing: 2px;text-decoration: none;">nexus.virtualevent@gmail.com </a> <!-- LAYER NR. 7 -->
+              style="z-index: 10; white-space: nowrap; font-size: 15px; line-height: 21px; font-weight: 500; color: #ffffff; letter-spacing: 2px;text-decoration: none;">nexus.virtualevents@gmail.com </a> <!-- LAYER NR. 7 -->
             <div class="tp-caption " id="slide-7-layer-9" data-x="['right','right','center','center']" data-hoffset="['45','45','0','0']" data-y="['middle','middle','bottom','bottom']" data-voffset="['-30','-30','110','110']"
               data-width="['55','55','300','300']" data-height="['none','none','55','55']" data-whitespace="nowrap" data-type="text" data-basealign="slide" data-responsive_offset="off" data-responsive="off"
               data-frames='[{"delay":1100,"speed":1500,"frame":"0","from":"x:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -504,8 +504,8 @@
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
-                          <h3 class="port-title">The Virtual Villeage</h3>
-                          <div class="category">Lawrenceville School</div>
+                          <h3 class="port-title" style="font-family: Roboto; font-weight: 200;">The Virtual Villeage</h3>
+                          <div class="category" style="font-family: Roboto; font-weight: 200;">The Lawrenceville School</div>
                         </div>
                       </div>
                     </div> <!-- End Single Portfolio -->
@@ -515,8 +515,8 @@
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
-                          <h3 class="port-title">Digital Marketing Basics</h3>
-                          <div class="category">Digital</div>
+                          <h3 class="port-title" style="font-family: Roboto; font-weight: 200;">The Virtual Villeage</h3>
+                          <div class="category" style="font-family: Roboto; font-weight: 200;">The Lawrenceville School</div>
                         </div>
                       </div>
                     </div> <!-- End Single Portfolio -->
@@ -526,8 +526,8 @@
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
-                          <h3 class="port-title">Digital Marketing Basics</h3>
-                          <div class="category">Digital</div>
+                          <h3 class="port-title" style="font-family: Roboto; font-weight: 200;">The Virtual Villeage</h3>
+                          <div class="category" style="font-family: Roboto; font-weight: 200;">The Lawrenceville School</div>
                         </div>
                       </div>
                     </div> <!-- End Single Portfolio -->
@@ -537,8 +537,8 @@
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
-                          <h3 class="port-title">Digital Marketing Basics</h3>
-                          <div class="category">Digital</div>
+                          <h3 class="port-title" style="font-family: Roboto; font-weight: 200;">The Virtual Villeage</h3>
+                          <div class="category" style="font-family: Roboto; font-weight: 200;">The Lawrenceville School</div>
                         </div>
                       </div>
                     </div> <!-- End Single Portfolio -->
@@ -548,8 +548,8 @@
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
-                          <h3 class="port-title">Digital Marketing Basics</h3>
-                          <div class="category">Digital</div>
+                          <h3 class="port-title" style="font-family: Roboto; font-weight: 200;">The Virtual Villeage</h3>
+                          <div class="category" style="font-family: Roboto; font-weight: 200;">The Lawrenceville School</div>
                         </div>
                       </div>
                     </div> <!-- End Single Portfolio -->
@@ -559,8 +559,8 @@
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
-                          <h3 class="port-title">Digital Marketing Basics</h3>
-                          <div class="category">Digital</div>
+                          <h3 class="port-title" style="font-family: Roboto; font-weight: 200;">The Virtual Villeage</h3>
+                          <div class="category" style="font-family: Roboto; font-weight: 200;">The Lawrenceville School</div>
                         </div>
                       </div>
                     </div> <!-- End Single Portfolio -->
