--- a/templates/index.html
+++ b/templates/index.html
@@ -430,8 +430,8 @@
               <div class="service service--2">
                 <div class="thumb"> <img src="{{url_for('static',filename='img/service/home-creative-agency-box-image-01.png')}}" alt="images"> </div>
                 <div class="content">
-                  <h4>Modern Design</h4>
-                  <p>Brook embraces a modern look with various enhanced pre-defined page elements.</p>
+                  <h4>Real-time Multiplayer System</h4>
+                  <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
