--- a/templates/index.html
+++ b/templates/index.html
@@ -450,8 +450,8 @@
               <div class="service service--2">
                 <div class="thumb"> <img src="{{url_for('static',filename='img/service/home-creative-agency-box-image-03.png')}}" alt="images"> </div>
                 <div class="content">
-                  <h4>Responsive Design</h4>
-                  <p>Brook is highly responsive thanks to built-in WPBakery Page Builder & Slider Revolution.</p>
+                  <h4>3D Terrain Models</h4>
+                  <p>Nexus uses 3D Terrain Models imported from Google Earth.</p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
