--- a/templates/index.html
+++ b/templates/index.html
@@ -428,7 +428,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up">
               <div class="service service--2">
-                <div class="thumb"> <img src="{{url_for('static',filename='play.svg')}}" alt="images"> </div>
+                <div class="thumb"> <img src="{{url_for('static',filename='play.png')}}" alt="images"> </div>
                 <div class="content">
                   <h4>Real-time Multiplayer System</h4>
                   <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
