--- a/templates/index.html
+++ b/templates/index.html
@@ -428,7 +428,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up">
               <div class="service service--2">
-                <div class="thumb"> <img src="{{url_for('static',filename='img/service/icon1.png')}}" alt="images"> </div>
+                <div class="thumb"> <img src="{{url_for('static',filename='img/service/icon1new copy.png')}}" alt="images"> </div>
                 <div class="content">
                   <h4>Real-time Multiplayer System</h4>
                   <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
@@ -438,7 +438,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_mobile--40">
               <div class="service service--2">
-                <div class="thumb"> <img src="{{url_for('static',filename='img/service/icon2.png')}}" alt="images"> </div>
+                <div class="thumb"> <img src="{{url_for('static',filename='img/service/icon2new.png')}}" alt="images"> </div>
                 <div class="content">
                   <h4>Customizable Avatars</h4>
                   <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
@@ -448,7 +448,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_sm--40">
               <div class="service service--2">
-                <div class="thumb"> <img src="{{url_for('static',filename='img/service/icon3.png')}}" alt="images"> </div>
+                <div class="thumb"> <img src="{{url_for('static',filename='img/service/icon3new copy.png')}}" alt="images"> </div>
                 <div class="content">
                   <h4>Google Maps Integration</h4>
                   <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
